@@ -1,8 +1,5 @@
 #!/bin/sh
-echo "*** Changing to your build dir and"
-echo "*** Running configure with your settings"
-TEMPDIR=`pwd`
 
-cd $BUILDDIR && $TEMPDIR/configure --prefix=/usr \
+./configure --prefix=/usr \
 	--enable-debug --disable-shared \
 	--without-conf --sysconfdir=/etc
